--- a/03/index.html
+++ b/03/index.html
@@ -24,6 +24,7 @@
     <!-- #就是對應到id且每個id是獨一無二但網頁不會說錯 -->
     <!-- .是對應到class -->
     <!-- syle就是css -->
+    <!-- div跟span要打內容才會顯示 -->
 </head>
 <body>
     <div id="a1" style="color: rgb(222, 148, 50);">我是div1</div>
