--- a/thewoodgames_1101/index.html
+++ b/thewoodgames_1101/index.html
@@ -12,21 +12,21 @@
 <body>
     <div class="main">
         <header>
-            <img src="img/logo.png" alt="">
+            <img class="logo" src="img/logo.png" alt="">
         </header>
         <nav>
             <ul>
                 <li>
                     <span>介紹</span>
-                    <span>About</span>
+                    <span class="en_text">About</span>
                 </li>
                 <li>
                     <span>遊戲</span>
-                    <span>Games</span>
+                    <span class="en_text">Games </span>
                 </li>
                 <li>
                     <span>商店</span>
-                    <span>Shops</span>
+                    <span class="en_text">Shops</span>
                 </li>
             </ul>
         </nav>
