--- a/thewoodgames_1101/index.html
+++ b/thewoodgames_1101/index.html
@@ -10,23 +10,35 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="main">
+    <div  class="main">
         <header>
             <img class="logo" src="img/logo.png" alt="">
         </header>
         <nav>
             <ul>
                 <li>
+                    <a class="nav_item" href="About.html">
                     <span>介紹</span>
                     <span class="en_text">About</span>
+                    </a>
                 </li>
                 <li>
-                    <span>遊戲</span>
-                    <span class="en_text">Games </span>
+                    <div class="nav_item" >
+                         <span>遊戲</span>
+                         <span class="en_text">Games </span>
+                         <div class="nav_child ">
+                            <div>
+                              <a href="#">萬貓的慶典<br>Festival of Thousand Cats</a>
+                              <a href="#">福爾摩斯大對決<br>Holmes : Sherlock & Mycroft</a>
+                            </div>
+                        </div>
+                    </div>
                 </li>
                 <li>
+                    <a class="nav_item" href="shop.html">
                     <span>商店</span>
                     <span class="en_text">Shops</span>
+                    </a>
                 </li>
             </ul>
         </nav>
