--- a/thewoodgames_1101/index.html
+++ b/thewoodgames_1101/index.html
@@ -40,6 +40,12 @@
                     <span class="en_text">Shops</span>
                     </a>
                 </li>
+                <li>
+                    <a class="nav_item" href="shop.html">
+                    <span>商店2</span>
+                    <span class="en_text">Shops</span>
+                    </a>
+                </li>
             </ul>
         </nav>
         <!-- 有選單的用nav做 -->
