--- a/thewoodgames_1101/index.html
+++ b/thewoodgames_1101/index.html
@@ -53,16 +53,18 @@
 
 
     </div>
-<div>
-    <footer>
-        <ul>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-        <div>@ 2017 此木創遊 The Wood Games</div>
-    </footer>
-    </div>
+</div>
+</div>
+<footer>
+    <div class="main">
+     <ul>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+    <div>@ 2017 此木創遊 The Wood Games</div>
+</div>
+</footer> 
 </body>
 </html>
